# tickerfetch

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  smokeshow.yml
src/tickerfetch/: cli.py
tests/: test_example.py
