[project]
name = "tickerfetch"
version = "0.0.1"
description = "A neofetch-inspired CLI tool for displaying stock market data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
    "yfinance>=0.2.65",
]

[project.scripts]
tickerfetch= "tickerfetch.cli:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.16.1",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py313"

[tool.coverage.run]
branch = true
parallel = true
source = ["tests"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
